--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "config": "^3.2.4",
     "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -21,12 +22,15 @@
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
+    "npm-run-all": "^4.1.5",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:dev": "webpack --env dev --progress --profile --colors"
+    "build:dev": "webpack --env dev --progress --profile --colors --watch",
+    "start:dev": "node dist/server.js",
+    "debug:dev": "npm-run-all --parallel build:dev start:dev"
   },
   "author": "",
   "license": "ISC"
