--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "config": "^3.2.4",
     "express": "^4.17.1",
     "react": "^16.12.0",
+    "react-css-transition": "^0.7.4",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0"
@@ -21,8 +23,12 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
